--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "keywords": ["twig", "markdown", "parsedown"],
     "license": "MIT",
     "require": {
-        "php": "~7.0",
+        "php": "~8.0",
         "twig/twig": "~2",
         "erusev/parsedown-extra": "0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.35",
+        "phpunit/phpunit": "^10.0",
         "mockery/mockery": "~0.9"
     },
     "autoload": {
